--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,11 @@
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_tools" />
+
+        <item
+            android:id="@+id/transactionList"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/hello_blank_fragment" />
     </group>
 
     <item android:title="Communicate">
