--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,4 +40,9 @@
         android:name="com.upos.id.ui.send.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
+    <fragment
+        android:id="@+id/transactionList"
+        android:name="com.upos.id.TransactionList"
+        android:label="fragment_transaction_list"
+        tools:layout="@layout/fragment_transaction_list" />
 </navigation>
