--- a/app/src/main/res/layout-w900dp/transaction_list.xml
+++ b/app/src/main/res/layout-w900dp/transaction_list.xml
@@ -10,7 +10,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context=".TransactionListActivity">
+    tools:context=".MainActivity">
 
     <!--
     This layout is a two-pane layout for the Transactions
@@ -27,7 +27,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.upos.id.TransactionListActivity"
+        tools:context="com.upos.id.MainActivity"
         tools:listitem="@layout/transaction_list_content" />
 
     <FrameLayout
