--- a/app/src/main/res/layout/produk_list_content.xml
+++ b/app/src/main/res/layout/produk_list_content.xml
@@ -3,14 +3,13 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="@dimen/card_view_margin">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        card_view:cardCornerRadius="0dp"
-        >
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="0dp">
 
 
         <RelativeLayout
@@ -34,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@android:color/white"
+
                  />
 
 
@@ -43,12 +42,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@android:color/white"
                 android:layout_below="@+id/id_text" />
 
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
