--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,6 @@
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.upos.id.OrderFragment"
-        android:label="fragment_order"
+        android:label="Order"
         tools:layout="@layout/fragment_order" />
 </navigation>
