--- a/app/src/main/res/layout/produk_list_content.xml
+++ b/app/src/main/res/layout/produk_list_content.xml
@@ -15,9 +15,7 @@
         <RelativeLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
+            android:layout_height="match_parent"
             android:layout_margin="3dp">
 
             <ImageView
@@ -25,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
+                android:scaleType="fitXY"
                 android:src="@mipmap/ic_launcher_round"
                 android:layout_centerHorizontal="true"/>
 
@@ -32,10 +31,12 @@
                 android:id="@+id/namaTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_below="@id/imageView"
                 android:text="@string/app_name"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
                 android:textAlignment="center"/>
+
 
 
         </RelativeLayout>
