--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,11 +11,10 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
-
     <fragment
         android:id="@+id/transactionList"
         android:name="com.upos.id.TransactionListFragment"
-        android:label="fragment_transaction_list"
+        android:label="Transactions"
         tools:layout="@layout/fragment_transaction_list" />
     <fragment
         android:id="@+id/orderFragment"
