--- a/app/src/main/res/layout/produk_list_content.xml
+++ b/app/src/main/res/layout/produk_list_content.xml
@@ -20,19 +20,20 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:padding="5dp"
                 android:scaleType="fitXY"
                 android:src="@mipmap/ic_launcher_round"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"/>
 
             <TextView
                 android:id="@+id/namaTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/imageView"
                 android:text="@string/app_name"
+                android:layout_below="@id/imageView"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
                 android:textAlignment="center"/>
