--- a/app/src/main/res/drawable/actionbar_group_icon.xml
+++ b/app/src/main/res/drawable/actionbar_group_icon.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@drawable/ic_menu_send"
+        android:drawable="@drawable/ic_shopping_cart"
         android:gravity="center" />
 
     <item
