--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,6 +19,6 @@
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.upos.id.OrderFragment"
-        android:label="Order"
+        android:label="Order Baru"
         tools:layout="@layout/fragment_order" />
 </navigation>
